testdata/baselines/reference/submodule/conformance/tsxPreserveEmit1.errors.txt
test.tsx(2,24): error TS2307: Cannot find module 'react' or its corresponding type declarations.
test.tsx(3,30): error TS2307: Cannot find module 'react-router' or its corresponding type declarations.


==== test.tsx (2 errors) ====
    // Should emit 'react-router' in the AMD dependency list
    import React = require('react');
                           ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    import ReactRouter = require('react-router');
                                 ~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'react-router' or its corresponding type declarations.
    
    import Route = ReactRouter.Route;
    
    var routes1 = <Route />;
    
    module M {
    	export var X: any;
    }
    module M {
    	// Should emit 'M.X' in both opening and closing tags
    	var y = <X></X>;
    }
    
==== react.d.ts (0 errors) ====
    declare module 'react' {
    	var x: any;
    	export = x;
    }
    
    declare module ReactRouter {
    	var Route: any;
    	interface Thing { }
    }
    declare module 'react-router' {
    	export = ReactRouter;
    }
    